--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "per.png"
   name             : "Pengxin Xu"
   pronouns         : # example: "she/her"  
-  bio              : "Master's student"
+  bio              : "Master Student in HUST"
   location         : "Wuhan, China"
   employer         : "HUST"
   uri              : # URL
